# beamline-simulator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  project-prd.md  pyrightconfig.json
.cursor/plans/: beamline_simulator_implementation_db417f9e.plan.md  m1_foundation_setup_074d9f27.plan.md  m2_c_device_server_9b3112b4.plan.md  m3_python_daq_layer_32ce29b3.plan.md  m4_analysis_module_5dac0298.plan.md  m5_integration_30d4bd58.plan.md
.cursor/rules/: c-stack.mdc  devops-and-workflow.mdc  python-stack.mdc  python-style.mdc
.github/workflows/: ci.yml
device/: .clang-format  .clang-tidy  meson.build
device/include/: config.h  devices.h  protocol.h  server.h  utils.h
device/src/: devices.c  main.c  protocol.c  server.c  utils.c
device/tests/: test_devices.c  test_protocol.c
docker/: .dockerignore.device  .dockerignore.python  Dockerfile.device  Dockerfile.python  docker-compose.yml
docs/: nexus_format.md
examples/: 01_basic_scan.py  02_linear_scan.py  03_mesh_scan.py  04_xafs_scan.py  05_nexus_export.py
python/: pyproject.toml
python/beamline/: __init__.py
python/beamline/analysis/: __init__.py  xafs.py  xrd.py
python/beamline/daq/: __init__.py  client.py  data.py  device.py  exceptions.py  nexus.py  scan.py
python/tests/: __init__.py  test_client.py  test_data.py  test_device.py  test_nexus.py  test_scan.py  test_xafs.py  test_xrd.py
