[project]
name = "beamline-simulator"
version = "0.1.0"
description = "Synchrotron beamline device simulator with DAQ and analysis capabilities"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Muhammed Taha Ayan"}
]
keywords = ["beamline", "synchrotron", "xafs", "xrd", "epics", "daq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "h5py>=3.10.0",
    "pydantic>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.92.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "scipy-stubs>=1.14.0",
    "ipython>=8.14.0",
    "matplotlib>=3.7.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beamline"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
mypy_path = "."
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
]
ignore_missing_imports = false  # Use scipy-stubs

[[tool.mypy.overrides]]
module = "h5py.*"
ignore_missing_imports = true  # h5py doesn't have stubs

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.pyright]
include = ["beamline", "tests", "../examples"]
exclude = ["**/__pycache__", "**/.venv"]
